Fixed elipsis overflow in <td>

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -372,6 +372,7 @@ td {
 }
 
 td a {
+    max-width: 100%;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
